deploy/deploy.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kube-oidc-issuer-reflector
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kube-oidc-issuer-reflector
  namespace: kube-oidc-issuer-reflector
spec:
  replicas: 2
  revisionHistoryLimit: 3
  minReadySeconds: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: kube-oidc-issuer-reflector
  template:
    metadata:
      labels:
        app: kube-oidc-issuer-reflector
    spec:
      serviceAccountName: kube-oidc-issuer-reflector
      enableServiceLinks: false
      securityContext:
        runAsNonRoot: true
        runAsUser: 65532
        runAsGroup: 65532
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: kube-oidc-issuer-reflector
        image: ghcr.io/djr747/kube-oidc-issuer-reflector:1.2.1
        imagePullPolicy: IfNotPresent
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          capabilities:
            drop:
              - ALL
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: tmp
          mountPath: /tmp
        resources:
          requests:
            memory: "128Mi"
            cpu: "250m"
            ephemeral-storage: "10Mi"
          limits:
            memory: "512Mi"
            cpu: "500m"
            ephemeral-storage: "1Gi"
        livenessProbe:
          httpGet:
            path: /livez
            port: 8080
          initialDelaySeconds: 10
          timeoutSeconds: 2
          periodSeconds: 30
          failureThreshold: 2
        readinessProbe:
          httpGet:
            path: /readyz
            port: 8080
          initialDelaySeconds: 5
          timeoutSeconds: 12
          periodSeconds: 30
          failureThreshold: 3
      volumes:
      - name: tmp
        emptyDir:
          medium: Memory
          sizeLimit: 16Mi
      automountServiceAccountToken: true
---
apiVersion: v1
kind: Service
metadata:
  name: kube-oidc-issuer-reflector
  namespace: kube-oidc-issuer-reflector
spec:
  selector:
    app: kube-oidc-issuer-reflector
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  type: ClusterIP
