deploy/optional-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kube-oidc-issuer-reflector
  namespace: kube-oidc-issuer-reflector
  annotations:
    cert-manager.io/cluster-issuer: $CLUSTER_ISSUER_NAME
spec:
  ingressClassName: $INGRESS_CLASS_NAME
  rules:
  - host: $OIDC_ISSUER_FQDN
    http:
      paths:
        - path: /.well-known/openid-configuration
          pathType: Exact
          backend:
            service:
              name: kube-oidc-issuer-reflector
              port:
                number: 80
        - path: /openid/v1/jwks
          pathType: Exact
          backend:
            service:
              name: kube-oidc-issuer-reflector
              port:
                number: 80
  tls:
    - hosts:
        - $OIDC_ISSUER_FQDN
      secretName: kube-oidc-issuer-reflector-tls
